0.9.0 (currently working on)
- [#3533] Change: Make the company field one line and document how to change that
- [#3551] Fix: The configuration registry needs to make sure the configuration is loaded in the FE
- [#3517] Fix: The CSV export page for the registrations on a page, has the wrong content type
- [#3298] Feature: Provide a way to list the registrations for a selected event
- [#3508] Cleanup: Replace space + tab with tab
- [#3489] Change: Use the price view helper
- [#3491] Change: Allow prices with 3 decimal digits
- [#3436] Feature: Add a hook for modifying the salutation in the e-mails
- [#3446] Feature: Hide the "create new record" buttons if the logged-in BE user has no write access to the configured sysfolder or the corresponding table
- [#3294] Feature: Store the records created in the "Events" BE module in the sysfolder selected in the BE user groups
- [#3484] Fix: In some BE modules the bags are destructed to early or not at all
- [#3305] Fix: Remove the registration column from the "my managed events" and "events entered by me" lists
- [#3306] Fix: Hide the CSV export, cancel and confirm button for hidden events in the BE module
- [#3468] Change: Use the place Mapper in the front end selector widget
- [#3293] Feature: Add a configuration to BE user groups in which sysfolder aux records created in the "events" BE module should be stored
- [#3297] Feature: Add a button "CSV export" to the "registrations" tab
- [#2733] Fix: allowCsvExportOfRegistrationsInMyVipEventsView configured via FlexForm has no effect
- [#2046] Fix: The number of steps and pages must be checked in relation to each other
- [#3292] Feature: Add a configuration to BE user groups in which sysfolder registration records created in the "events" BE module should be stored
- [#3455] Fix: The function createCsvExportOfRegistrations does not exist
- [#3437] Change: Use the same salutation in the back-end form e-mails as in the thank-you e-mails